add camunda 8 endpoints
- adapt to new defensive loading of extensions
